story #8956 - Sélection du type convention